--- a/src/app/auth/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/auth/layouts/auth-layout/auth-layout.component.html
@@ -1,16 +1,10 @@
-<!--
-
 <div class="limiter">
   <div
     class="container-login100"
     style="background-image: url('../../../../assets/images/bg-01.jpg')"
   >
     <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-      <p>auth-layouts works</p>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
--->
-
-<p>auth-layouts works</p>
-<router-outlet />
