--- a/src/app/dashboard/layouts/dasboard-layout/dasboard-layout.component.html
+++ b/src/app/dashboard/layouts/dasboard-layout/dasboard-layout.component.html
@@ -1,1 +1,12 @@
-<p>dasboard-layout works!</p>
+<p>Dashboard</p>
+
+<hr />
+
+<h3>User</h3>
+
+<pre>
+    {{ user() | json }}
+</pre>
+
+<br />
+<span routerLink="/auth"></span>
